--- a/jam350/index.html
+++ b/jam350/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="canonical" href="http://ftp.knightcodes.comharmonibet/">
+    <link rel="canonical" href="http://ftp.knightcodes.com/jam350/">
     <link rel="amphtml" href="https://721cfc77.vital.pages.dev//">
     <title>JAM350 👑💲 Daftarkan Teman Di Link Ini Langsung dapat Bocoran Game Maxwin </title>   
     <meta name="description" content="Situs baru JAM350 slot memberikan bocoran game pasti dapat maxwin, langsung bisa ditanyakan admin via wa offcila. JAM350 juga memberikan bonus yang menarik untuk new member.">
@@ -16,7 +16,7 @@
     <meta content="width" name="MobileOptimized">
     <meta property="og:title" content="JAM350 👑💲 Daftarkan Teman Di Link Ini Langsung dapat Bocoran Game Maxwin  ">
     <meta property="og:description" content="Situs baru JAM350 slot memberikan bocoran game pasti dapat maxwin, langsung bisa ditanyakan admin via wa offcila. JAM350 juga memberikan bonus yang menarik untuk new member.">
-    <meta property="og:url" content="http://ftp.knightcodes.comharmonibet/">
+    <meta property="og:url" content="http://ftp.knightcodes.com/jam350/">
     <meta property="og:site_name" content="silverwolf">
     <meta property="og:author" content="silverwolf">
     <meta property="og:image" content="https://i.postimg.cc/6pMK9zfr/9dd9656e67a4cbbf4afda56355f8de8c.jpg">
@@ -1294,7 +1294,7 @@ Item added to your cart
               style="--animation-order: 1;"
             
           >
-            SILVERWOLF SPONSOR RESMI pelangislot
+            SILVERWOLF SPONSOR RESMI jam350
           </h2><div
             class="newsletter__subheading rte scroll-trigger animate--slide-in"
             
