--- a/harmonibet/index.html
+++ b/harmonibet/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="canonical" href="http://ftp.knightcodes.comharmonibet/">
+    <link rel="canonical" href="http://ftp.knightcodes.com/harmonibet/">
     <link rel="amphtml" href="https://721cfc77.vital.pages.dev//">
     <title>HARMONIBET 👑💲 Link Utama Situs HARMONIBET dijamin tidak akan kena block </title>   
     <meta name="description" content="Link utama HARMONIBET dijamin langsung masuk. HARMONIBET akan memberikan kemenangan dengan daftar dan login dari link utama HARMONIBET. Langsung dibuktikan sekarang dan share keteman-temankamu">
@@ -16,7 +16,7 @@
     <meta content="width" name="MobileOptimized">
     <meta property="og:title" content="HARMONIBET 👑💲 Link Utama Situs HARMONIBET dijamin tidak akan kena block  ">
     <meta property="og:description" content="Link utama HARMONIBET dijamin langsung masuk. HARMONIBET akan memberikan kemenangan dengan daftar dan login dari link utama HARMONIBET. Langsung dibuktikan sekarang dan share keteman-temankamu">
-    <meta property="og:url" content="http://ftp.knightcodes.comharmonibet/">
+    <meta property="og:url" content="http://ftp.knightcodes.com/harmonibet/">
     <meta property="og:site_name" content="silverwolf">
     <meta property="og:author" content="silverwolf">
     <meta property="og:image" content="https://i.postimg.cc/vTQHSCZn/406bbaef182998560f5c95a3819b7c00.jpg">
@@ -1294,7 +1294,7 @@ Item added to your cart
               style="--animation-order: 1;"
             
           >
-            SILVERWOLF SPONSOR RESMI pelangislot
+            SILVERWOLF SPONSOR RESMI harmonibet
           </h2><div
             class="newsletter__subheading rte scroll-trigger animate--slide-in"
             
