--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="canonical" href="http://ftp.knightcodes.com/">
-    <link rel="amphtml" href="https://bukamarketing.pages.dev/">
+    <link rel="amphtml" href="https://silver-9s1.pages.dev/">
     <title>BUKASLOT: Situs Slot BUKASLOT Online  betting 200 Perak langsung maxwin 1Juta</title>   
     <meta name="description" content="Situs BUKASLOT adalah Situs BUKASLOT Online Terbaik Dan Terpercaya Main Bettingan 200 perak langsung Maxwin 1Jt.">
     <meta name="keywords" content="BUKASLOT, login BUKASLOT, daftar BUKASLOT, Slot BUKASLOT, Situs slot BUKASLOT">
